- changed constants class into interface (zyspec/goffy)
- added next steps notification event (goffy)
- added notification event new, modify, approve (goffy)
- added yoda condition (goffy)
- editor admin/user (mamba/goffy)
- added check quality/inconsistences of module data before building (goffy)
- fixed bugs in comments handling (goffy)
- added notification comments (goffy)

<h5>3.03 Alpha 3   [WORK IN PROGRESS - NOT RELEASED]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.5
<hr>
- fix class names to case-sensitive  (heyula/mamba)
- fix folder names to case-sensitive  (mamba)
- add folder & file checkers (mamba)
- add SysUtility class (mamba)
- fix $pathIcon16 (mamba)
- add __NAMESPACE__ to Helper (mamba)
- splitted contend of index file and page file (goffy)
- removed old testdata (goffy)

<h5>3.03 Alpha 2   [WORK IN PROGRESS - NOT RELEASED]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.5
<hr>
- rename to ModuleBuilder (mamba)


<h5>3.02 Alpha 1   [WORK IN PROGRESS - NOT RELEASED]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.2
<hr>
work done by goffy:
 - added implementation of common files
 - changed modversion from xoops_version.php into arrays
 - changed submenu in xoops_version.php
 - splitted class files into class and classhandler
 - added usage of namespaces in created modules
 - added sample data
 - rebuild install, uninstall and update
 - implememted feedback
 - replaced Xmf\Request::... by use Xmf\Request + Request::...
 - implemented image resizer
 - rebuild language defines for upload in forms
 - fixed bug with multiple upload formfields in one form
 - updated permissions to handle multiple permissions
 - added permissions class and permissions handler
 - cosmetics
 - fixed bugs in getXoopsFormSelectFile and getClassGetTableSolenameById
 - added save/load group permissions to sample data
 - rebuild blocks file
 - splitted CreateHtmlSmartycodes into CreateHtmlcode/CreateSmartycode for better handling
 - added images for checkbox and status in lists in admin area
 - fixed bugs at building